[package]
name = "dyndns"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
axum-client-ip = "0.6.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.22"
nanoid = "0.4.0"
reqwest = "0.12.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1", features = ["full"] }
